--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Meme generator</title>
+    <title>Hello World</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
